name:                google-maps-reflex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cfraz98/reflex-dom-google-maps#readme
license:             BSD3
license-file:        LICENSE
author:              cfraz89
maintainer:          example@example.com
copyright:           2017 Chris Fraser
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoogleMapsReflex.GoogleMaps,
                       GoogleMapsReflex.Widget
  build-depends:       base >= 4.7 && < 5,
                       jsaddle,
                       jsaddle-dom,
                       ghcjs-dom,
                       reflex,
                       reflex-dom,
                       text,
                       data-default
  default-language:    Haskell2010


test-suite google-maps-reflex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-dom-google-maps
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cfraz89/google-maps-reflex
