name:                google-maps-reflex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cfraz98/reflex-dom-google-maps#readme
license:             BSD3
license-file:        LICENSE
author:              cfraz89
maintainer:          example@example.com
copyright:           2017 Chris Fraser
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoogleMapsReflex,
                       GoogleMapsReflex.MapsApi,
                       GoogleMapsReflex.Widget
                       GoogleMapsReflex.Types,
                       GoogleMapsReflex.MapsEvent,
                       GoogleMapsReflex.JSTypes,
                       GoogleMapsReflex.JSTypes.LatLng,
                       GoogleMapsReflex.JSTypes.Size,
                       GoogleMapsReflex.JSTypes.MarkerOptions,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.MapOptions,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.FullscreenControlOptions,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.ControlPosition,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.GestureHandling,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.MapType,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.PanControlOptions,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.RotateControlOptions,
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.ScaleControl
                       GoogleMapsReflex.JSTypes.MapOptionsTypes.ZoomControlOptions,
                       GoogleMapsReflex.JSTypes.InfoWindow
  other-modules:       GoogleMapsReflex.MapsLoader,
                       GoogleMapsReflex.Common,
                       GoogleMapsReflex.GoogleMaps
  build-depends:       base >= 4.7 && < 5,
                       jsaddle,
                       jsaddle-dom,
                       ghcjs-dom,
                       reflex,
                       reflex-dom,
                       text,
                       data-default,
                       ref-tf,
                       dependent-sum-template,
                       dependent-map
  default-language:    Haskell2010


test-suite google-maps-reflex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , google-maps-reflex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cfraz89/google-maps-reflex
